z-index fix for sidebar and project pagination bullets

--- a/public/ssk.css
+++ b/public/ssk.css
@@ -125,7 +125,7 @@ nav {
 }
 nav.open {
 	left: 0;
-	z-index: 10;
+	z-index: 20;
 }
 
 .menu {
